// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmConnectedNetwork has a connecting state 1`] = `
<div
  class="tm-connected-network tm-disconnected-network"
  id="tm-disconnected-network"
>
  <img
    class="tm-connected-network-loader"
    src="~assets/images/loader.svg"
  />
   
  <div
    class="tm-connected-network__string tm-connected-network__string--connecting"
  >
    
    Connecting to Test Net…
  
  </div>
</div>
`;

exports[`TmConnectedNetwork has the expected html structure 1`] = `
<div
  class="tm-connected-network"
  id="tm-connected-network"
>
  <div
    class="tm-connected-network__connection"
  >
    <div
      class="tm-connected-network__icon"
      id="tm-connected-network__icon"
    >
      <i
        class="material-icons"
      >
        lock
      </i>
    </div>
     
    <div
      class="tm-connected-network__string"
      id="tm-connected-network__string"
    >
      <span
        class="chain-id"
      >
        Test Net
      </span>
    </div>
  </div>
   
  <div
    class="tm-connected-network__string"
    id="tm-connected-network__block"
  >
    <router-link-stub
      to="[object Object]"
    >
      #42
    </router-link-stub>
  </div>
</div>
`;

exports[`TmConnectedNetwork shows the connected node 1`] = `
<div
  class="tm-connected-network"
  id="tm-connected-network"
>
  <div
    class="tm-connected-network__connection"
  >
    <div
      class="tm-connected-network__icon"
      id="tm-connected-network__icon"
    >
      <i
        class="material-icons"
      >
        lock
      </i>
    </div>
     
    <div
      class="tm-connected-network__string"
      id="tm-connected-network__string"
    >
      <span
        class="chain-id"
      >
        chain_id
      </span>
    </div>
  </div>
   
  <div
    class="tm-connected-network__string"
    id="tm-connected-network__block"
  >
    <router-link-stub
      to="[object Object]"
    >
      #0
    </router-link-stub>
  </div>
</div>
`;
